[package]
name = "no-ansi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI tool for removing ANSI escape sequences from strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strip-ansi-escapes = "0.1.1"
clap = "3"
